# aligned_layer

./: .Makefile.swp  .dockerignore  .gitignore  .gitmodules  .golangci.yaml  .golangci.yml  Docs.md  LICENSE  Makefile  README.md  README_BATCHER_PAYMENTS.md  README_INFRAESTRUCTURE.md  README_INFRASTRUCTURE.md  README_NEW.md  README_OPERATOR.md  README_RUN.md  README_SEND_PROOFS.md  aligned.json  anvil.Dockerfile  batch_inclusion_data.json  compose.yaml  docker-compose.yaml  docker-compose.yml  encode_verification_data.py  go.mod  go.sum  grafana.ini  metrics-docker-compose.yaml  operator.Dockerfile  operator.Dockerfile.dockerignore  otel-collector.yaml  requirements.txt  storage-docker-compose.yaml  telemetry-docker-compose.yaml  telemetry-prod-docker-compose.yaml
batcher/: .gitignore  Cargo.toml  build.rs
batcher/aligned/: .env.bk  Cargo.toml  generate_proof_and_send.sh  get_proof_test_files.sh  install_aligned.sh  rust-toolchain  send_burst_tasks.sh  send_infinite_tasks.sh
batcher/aligned-batcher/: .env.dev  .env.docker  .env.example  .env.local  Cargo.toml  build.rs  rust-toolchain
batcher/aligned-batcher-client/: Cargo.toml  generate_proof_and_send.sh  send_burst_tasks.sh  send_infinite_tasks.sh
batcher/aligned-batcher-client/src/: main.rs
batcher/aligned-batcher-client/test_files/groth16_bn254/: plonk.proof
batcher/aligned-batcher-lib/: Cargo.toml
batcher/aligned-batcher-lib/src/: lib.rs
batcher/aligned-batcher-lib/src/gnark/: mod.rs
batcher/aligned-batcher-lib/src/halo2/: mod.rs
batcher/aligned-batcher-lib/src/types/: mod.rs
batcher/aligned-batcher-lib/src/utils/: mod.rs
batcher/aligned-batcher/fuzzing/: cbor.rs  verify_gnark_plonk_bn254.rs  verify_sp1_proof.rs
batcher/aligned-batcher/gnark/: go.mod  go.sum  verifier.go
batcher/aligned-batcher/src/: connection.rs  lib.rs  main.rs  metrics.rs  prometheus.rs  retry.rs  telemetry.rs
batcher/aligned-batcher/src/config/: mod.rs
batcher/aligned-batcher/src/eth/: mod.rs  payment_service.rs  service_manager.rs  utils.rs
batcher/aligned-batcher/src/fuzzing/: verify_halo2_kzg_fuzz.rs
batcher/aligned-batcher/src/gnark/: mod.rs
batcher/aligned-batcher/src/halo2/: mod.rs
batcher/aligned-batcher/src/jolt/: mod.rs
batcher/aligned-batcher/src/lita/: mod.rs
batcher/aligned-batcher/src/mina/: mod.rs
batcher/aligned-batcher/src/nexus/: mod.rs
batcher/aligned-batcher/src/retry/: batcher_retry.rs  batcher_retryables.rs  mod.rs
batcher/aligned-batcher/src/risc_zero/: mod.rs
batcher/aligned-batcher/src/s3/: mod.rs
batcher/aligned-batcher/src/sp1/: mod.rs
batcher/aligned-batcher/src/telemetry/: sender.rs
batcher/aligned-batcher/src/testonly/: mod.rs  queue_entry.rs
batcher/aligned-batcher/src/types/: batch_queue.rs  batch_state.rs  errors.rs  mod.rs  user_state.rs
batcher/aligned-batcher/src/valida/: Cargo.toml
batcher/aligned-batcher/src/validia/: Cargo.toml  mod.rs
batcher/aligned-batcher/src/zk_utils/: mod.rs
batcher/aligned-sdk/: Cargo.toml  README.md
batcher/aligned-sdk-example/: Cargo.toml
batcher/aligned-sdk-example/src/: main.rs
batcher/aligned-sdk/abi/: AlignedLayerServiceManager.json  BatcherPaymentService.json
batcher/aligned-sdk/src/: batch.rs  communication.rs  errors.rs  eth.rs  lib.rs  models.rs  protocol.rs  sdk.rs  types.rs  utils.rs
batcher/aligned-sdk/src/communication/: batch.rs  messaging.rs  protocol.rs  serialization.rs
batcher/aligned-task-sender/: Cargo.toml  README.md
batcher/aligned-task-sender/src/: commands.rs  lib.rs  main.rs  structs.rs
batcher/aligned-task-sender/wallets/: devnet  devnet-backup
batcher/aligned/abi/: AlignedLayerServiceManager.json
batcher/aligned/send_infinite_sp1_tasks/: requirements.txt  send_infinite_sp1_tasks.sh
batcher/aligned/src/: errors.rs  eth.rs  main.rs  types.rs
batcher/client/: Cargo.toml  anvil.ecdsa.key.json  batch_inclusion_data.json  generate_proof_and_send.sh  get_proof_test_files.sh  install_aligned.sh  send_burst_tasks.sh  send_infinite_tasks.sh
batcher/client/abi/: AlignedLayerServiceManager.json
batcher/client/send_infinite_sp1_tasks/: generate_address.py  send_infinite_sp1_tasks.sh
batcher/client/src/: errors.rs  eth.rs  main.rs
batcher/gnark/: go.mod  go.sum  verifier.go
batcher/openzeppelin_merkle_tree/: merkle_tree.js  package.json
batcher/sdk/: Cargo.toml
batcher/sdk/src/: errors.rs  lib.rs  test.rs
batcher/src/: lib.rs  main.rs
batcher/src/config/: mod.rs
batcher/src/connection/: mod.rs
batcher/src/eth/: mod.rs
batcher/src/gnark/: mod.rs
batcher/src/halo2/: mod.rs
batcher/src/halo2/ipa/: mod.rs
batcher/src/s3/: mod.rs
batcher/src/types/: batch_queue.rs  errors.rs  mod.rs
batcher/test-client/: Cargo.toml  send_burst_tasks.sh  send_infinite_tasks.sh  send_infinite_tasks_plonk.sh
batcher/test-client/src/: main.rs
cli/: .gitignore  Cargo.toml
cli/src/: main.rs
cli/src/http/: mod.rs
cli/src/proving_systems/: mod.rs
cli/src/utils/: mod.rs
examples/validating-public-input/aligned-integration/: .gitignore  Cargo.toml
operator/cairo_platinum/lib/: .gitignore  Cargo.toml  cairo_platinum.h
operator/halo2axiom/lib/: Cargo.toml  halo2axiom.h  libhalo2axiom_verifier.dylib
operator/halo2kzg/lib/: Cargo.toml  halo2kzg.h  libhalo2kzg_verifier.dylib
operator/jolt/lib/: Cargo.toml  jolt.h  libjolt_verifier.dylib
operator/kimchi/lib/: Cargo.toml  kimchi_ec_add.proof  libkimchi_verifier.dylib
operator/merkle_tree/lib/: Cargo.toml  merkle_tree.h  rust-toolchain
operator/merkle_tree_old/lib/: Cargo.toml  libmerkle_tree.dylib  merkle_tree.h
operator/mina/lib/: .gitignore  Cargo.toml  kimchi.h  libmina_state_verifier.dylib  mina_verifier.h
operator/mina_account/lib/: .gitignore  Cargo.toml  mina_account_verifier.h
operator/nexus/lib/: Cargo.toml  libnexus_verifier.dylib  nexus.h
operator/sp1/lib/: Cargo.toml  libsp1_verifier.dylib  rust-toolchain  sp1.h
operator_tracker/: .env.dev  .env.example  Cargo.toml  Dockerfile
operator_tracker/sql/: schema.sql
operator_tracker/src/: lib.rs  main.rs
scripts/test_files/halo2_ipa/: Cargo.toml
(+1189 files in other folders)
