[package]
name = "operator_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
serde = "1.0.208"
ethers = "2.0.14"
serde_json = "1.0.125"
log = "0.4.22"
base64 = "0.22.1"
env_logger = "0.11.5"
regex = "1.10.6"
dotenvy = "0.15.0"
argh = "0.1.12"
