[package]
name = "aligned-batcher-lib"
version = "0.1.0"
edition = "2021"

[features]
batcher = ["sp1-sdk", "lazy_static", "log","halo2_proofs", "halo2curves", "bincode"]

[dependencies]
alloy-primitives = { version = "0.7.4", features = ["serde"] }
anyhow = "1.0.83"
lazy_static = { version = "1.4.0", optional = true}
log = { version = "0.4.21", optional = true }
serde = { version = "1.0.201", features = ["derive"] }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.5-testnet", optional = true}
halo2curves = { version = "0.6.0", default-features = false , optional = true}
halo2_proofs = { git = "https://github.com/yetanotherco/yet-another-halo2-fork.git", branch = "feat/serde_constraint_system", optional = true}
sha3 = { version = "0.10.8"}
lambdaworks-crypto = { version = "0.7.0", features = ["serde"] }
hex = "0.4.3"
bincode = { version = "1.3.3" , optional = true}
