[package]
name = "aligned-batcher-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["ws", "rustls"] }
anyhow = "1.0.83"
log = { version = "0.4.21"}
serde = { version = "1.0.201", features = ["derive"] }
sha3 = { version = "0.10.8"}
lambdaworks-crypto = { version = "0.7.0", features = ["serde"] }
hex = "0.4.3"