[package]
name = "aligned-batcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = "0.21.0"
mina_bridge_core = { git = "https://github.com/lambdaclass/mina_bridge.git", branch = "relative_finalization" }
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.21"
env_logger = "0.11.3"
serde_json = "1.0.117"
serde = { version = "1.0.201", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
sha3 = "0.10.8"
aws-config = "1.4.0"
aws-sdk-s3 = "1.29.0"
bytes = "1.6.0"
hex = "0.4.3"
dotenv = "0.15.0"
anyhow = "1.0.83"
ethers = { tag = "v2.0.15-fix-reconnections", features = [
  "ws",
  "rustls",
], git = "https://github.com/yetanotherco/ethers-rs.git" }
lambdaworks-crypto = { version = "0.7.0", features = ["serde"] }
serde_yaml = "0.9.34"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1" }
risc0-zkvm = { git = "https://github.com/risc0/risc0", tag = "v1.0.1" }
halo2curves = { version = "0.6.0", default-features = false }
halo2_backend = { git = "https://github.com/yetanotherco/yet-another-halo2-fork.git", rev = "22b5d224f3cbeba917e48ba10c618a165e43cd23" }
halo2_proofs = { git = "https://github.com/yetanotherco/yet-another-halo2-fork.git", rev = "22b5d224f3cbeba917e48ba10c618a165e43cd23" }
bincode = "1.3.3"
aligned-sdk = { path = "../aligned-sdk" }
ciborium = "=0.2.2"
priority-queue = "2.1.0"
lazy_static = "1.4.0"
base64 = "0.22.1"
bs58 = "0.5.1"
