[package]
name = "aligned-batcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.21"
env_logger = "0.11.3"
serde_json = "1.0.117"
serde = { version = "1.0.201", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
sha3 = "0.10.8"
aws-config = "1.4.0"
aws-sdk-s3 = "1.29.0"
bytes = "1.7.1"
hex = "0.4.3"
dotenvy = "0.15.0"
anyhow = "1.0.83"
ethers = { version = "2.0", features = ["ws", "rustls"] }
lambdaworks-crypto = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "efd46f0b0aea3aa95d94bba7de86cb96611b40d3", features = ["serde"] }
serde_yaml = "0.9.34"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1" }
risc0-zkvm = { git = "https://github.com/risc0/risc0", tag = "v1.0.1" }
bincode = "1.3.3"
aligned-sdk = { path = "../aligned-sdk" }
ciborium = "=0.2.2"
priority-queue = "2.1.0"

once_cell = "1.20.2"
warp = "0.3.7"
prometheus = { version = "0.13.4", features = ["process"] }
backon = "1.2.0"
