[package]
name = "aligned"
version = "0.10.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = [
    "io-std",
    "time",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
] }
tokio-tungstenite = { version = "0.23.1", features = [
    "rustls-tls-webpki-roots",
    "native-tls",
] }
url = "2.5.0"
log = "0.4.21"
env_logger = "0.11.3"
clap = { version = "4.5.4", features = ["derive"] }
lambdaworks-crypto = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "efd46f0b0aea3aa95d94bba7de86cb96611b40d3", features = ["serde"] }
ethers = { tag = "v2.0.15-fix-reconnections", features = [
    "ws",
    "rustls",
], git = "https://github.com/yetanotherco/ethers-rs.git" }
aligned-sdk = { path = "../aligned-sdk" }
rpassword = "7.3.1"
sha3 = { version = "0.10.8" }
