[package]
name = "aligned"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["io-std", "time", "macros", "rt", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tungstenite = "0.21.0"
url = "2.5.0"
futures-channel = "0.3.30"
batcher = { path = "../" }
bytes = "1.6.0"
log = "0.4.21"
env_logger = "0.11.3"
alloy-primitives = "0.7.4"
clap = { version = "4.5.4", features = ["derive"] }
ethers-core = "2.0.14"
