[package]
name = "test-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["io-std", "time", "macros", "rt", "rt-multi-thread"] }
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
url = "2.5.0"
futures-channel = "0.3.30"
batcher = { path = "../" }
