[package]
name = "aligned-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag = "v0.5.2" }
tokio = { version = "1.37.0", features = [
    "io-std",
    "time",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
] }
ethers = { tag = "v2.0.15-fix-reconnections", features = [
    "ws",
    "rustls",
], git = "https://github.com/yetanotherco/ethers-rs.git" }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
log = "0.4.21"
env_logger = "0.11.3"
