[package]
name = "cairo-platinum-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
stark-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks" } 
cairo-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks" } 
bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git", features = ['serde'] }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
