[package]
name = "halo2kzg-verifier-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
halo2curves = { version = "0.6.0", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git" }
ff = "0.13"

[dev-dependencies]
group = "0.13"
tracing = "0.1"
rand_chacha = "0.3"
rayon = "1.8"
assert_matches = "1.5"
gumdrop = "0.8"
proptest = "1"
dhat = "0.3.2"
serde_json = "1"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
