[package]
name = "jolt-verifier-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-serialize = "0.4.2"
jolt-core = { path = "../../../../../Crypto/jolt/jolt-core" }
# TODO: Git path
jolt-sdk = { path = "../../../../../Crypto/jolt/jolt-sdk", features = ["host"] }
tracer = { path = "../../../../../Crypto/jolt/tracer" }
ark-bn254 = "0.4.0"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }

