[package]
name = "merkle_tree"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
bincode = "1.3.3"
lambdaworks-crypto = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "efd46f0b0aea3aa95d94bba7de86cb96611b40d3", features = ["serde"] }
hex = "0.4.3"
sha3 = "0.10.8"
aligned-sdk = { path = "../../../batcher/aligned-sdk" }
ciborium = "=0.2.2"
log = "0.4.21"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
