[package]
name = "merkle_tree"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
bincode = "1.3.3"
lambdaworks-crypto = { version = "0.7.0", features = ["serde"] }
hex = "0.4.3"
sha3 = "0.10.8"
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", rev = "dd19e5f69b001ca4e040c706f04b72de43825d5f" }
ciborium = "=0.2.2"
log = "0.4.21"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
