[package]
name = "mina-account-verifier-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
kimchi = { git = "https://github.com/lambdaclass/openmina-proof-systems", branch = "mina_bridge" }
poly-commitment = { git = "https://github.com/lambdaclass/openmina-proof-systems", branch = "mina_bridge" }
mina-curves = { git = "https://github.com/lambdaclass/openmina-proof-systems", branch = "mina_bridge" }
o1-utils = { git = "https://github.com/lambdaclass/proof-systems", branch = "add-verifier-serializations" }
ark-ff = { git = "https://github.com/openmina/algebra", branch = "openmina", features = ["parallel", "asm"] }
ark-ec = { git = "https://github.com/openmina/algebra", branch = "openmina", features = ["parallel"] }
ark-poly = { git = "https://github.com/openmina/algebra", branch = "openmina", features = ["parallel"] }
ark-serialize = { git = "https://github.com/openmina/algebra", branch = "openmina" }
serde = "1.0.197"
rmp-serde = "1.1.2"
serde_json = "1.0.118"
hex = "0.4.3"
mina-tree = { git = "https://github.com/lambdaclass/openmina/", branch = "mina_bridge" }
mina-p2p-messages = { git = "https://github.com/lambdaclass/openmina/", branch = "mina_bridge" }
base64 = "0.22.1"
bs58 = "0.5.1"
lazy_static = "1.5.0"
blake2 = "0.10.6"
once_cell = "1.19.0"
sha3 = "0.10.8"
mina_bridge_core = { git = "https://github.com/lambdaclass/mina_bridge", branch = "aligned" }
bincode = "1.3.3"
alloy = { version = "0.3.3", features = ["full"] }
