[package]
name = "sp1-verifier-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
# sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
# sp1-sdk = { git = “https://github.com/succinctlabs/sp1.git”, rev = “v1.0.0-testnet” }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.0-testnet" }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
