[package]
name = "halo2_ipa"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
halo2curves = { version = "0.6.0", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
halo2_backend = { git = "https://github.com/yetanotherco/yet-another-halo2-fork.git", rev = "a3a56819d9183ac0b11c8d0543c7673c4a4c71a6"}
halo2_proofs = { git = "https://github.com/yetanotherco/yet-another-halo2-fork.git", rev = "a3a56819d9183ac0b11c8d0543c7673c4a4c71a6"}
ff = "0.13"

[dev-dependencies]
group = "0.13"
tracing = "0.1"
rand_chacha = "0.3"
rayon = "1.8"
assert_matches = "1.5"
gumdrop = "0.8"
proptest = "1"
dhat = "0.3.2"
serde_json = "1"