[package]
name = "valida"
version = "0.1.0"
edition = "2021"

[dependencies]
ciborium = "0.2.2"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
valida-basic = { git = "https://github.com/valida-xyz/valida.git",  branch = "main"}
valida-machine = { git = "https://github.com/valida-xyz/valida.git",  branch = "main"}
valida-cpu = { git = "https://github.com/valida-xyz/valida.git",  branch = "main"}
valida-elf = { git = "https://github.com/valida-xyz/valida.git",  branch = "main"}
valida-program = { git = "https://github.com/valida-xyz/valida.git",  branch = "main"}
valida-static-data = { git = "https://github.com/valida-xyz/valida.git",  branch = "main"}
p3-air = { git = "https://github.com/valida-xyz/Plonky3.git", branch = "valida-main" }
p3-baby-bear = { git = "https://github.com/valida-xyz/Plonky3.git", branch = "valida-main" }
p3-commit = { git = "https://github.com/valida-xyz/Plonky3.git", branch = "valida-main" }
p3-challenger = { git = "https://github.com/valida-xyz/Plonky3.git", branch = "valida-main" }
p3-dft = { git = "https://github.com/valida-xyz/Plonky3.git", branch = "valida-main" }
p3-field = { git = "https://github.com/valida-xyz/Plonky3.git", branch = "valida-main" }
p3-fri = { git = "https://github.com/valida-xyz/Plonky3.git", branch = "valida-main" }
p3-goldilocks = { git = "https://github.com/valida-xyz/Plonky3.git", branch = "valida-main" }
p3-keccak = { git = "https://github.com/valida-xyz/Plonky3.git", branch = "valida-main" }
p3-matrix = { git = "https://github.com/valida-xyz/Plonky3.git", branch = "valida-main" }
p3-maybe-rayon = { git = "https://github.com/valida-xyz/Plonky3.git", branch = "valida-main" }
p3-mds = { git = "https://github.com/valida-xyz/Plonky3.git", branch = "valida-main" }
p3-merkle-tree = { git = "https://github.com/valida-xyz/Plonky3.git", branch = "valida-main" }
p3-poseidon = { git = "https://github.com/valida-xyz/Plonky3.git", branch = "valida-main" }
p3-symmetric = { git = "https://github.com/valida-xyz/Plonky3.git", branch = "valida-main" }
p3-uni-stark = { git = "https://github.com/valida-xyz/Plonky3.git", branch = "valida-main" }
p3-util = { git = "https://github.com/valida-xyz/Plonky3.git", branch = "valida-main" }
