[workspace]
[package]
version = "0.1.0"
name = "quiz-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v3.0.0-rc3" }
aligned-sdk = { path = "../../../../batcher/aligned-sdk" }
ethers = { tag = "v2.0.15-fix-reconnections", features = [
    "ws",
    "rustls",
], git = "https://github.com/yetanotherco/ethers-rs.git" }
rpassword = "7.3.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
bincode = "1.3.3"
clap = { version = "4.5.8", features = ["derive"] }
anyhow = "1.0.86"
log = "0.4.21"
hex = "0.4.3"
inquire = "0.7.5"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", tag = "v3.0.0-rc3" }
