[workspace]
[package]
version = "0.1.0"
name = "quiz-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1" }
aligned-sdk = { path = "../../../../batcher/aligned-sdk" }
ethers = { version = "2.0", features = ["ws", "rustls"] }

rpassword = "7.3.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
bincode = "1.3.3"
clap = { version = "4.5.8", features = ["derive"] }
anyhow = "1.0.86"
log = "0.4.21"
hex = "0.4.3"
dialoguer = "0.11.0"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1" }
